# apricot

./: .editorconfig  .gitignore  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main.cc  main.cpp
c/: hello.c  io_practice.c  macros.c  main.c
c/proj/: bar.h  foo.c
db/: main.cc
include/: ename.c  error_functions.c  error_functions.h  get_num.c  helper_tool.h  module.h  thread_pool.h
modern_cpp/docs/: readme.md
practice/go/: client.go
practice/io/: Makefile  epoll_.cc  iouring_.cc
server/: server.c
src/alg/sort/: quick_sort.cc  quick_sort_stack.cc
src/basic/: map_usage.cc  map_usage.h
src/concurrent/: process-based-echo-server.cc
src/fileio/: seek_io.c
src/io/: copy.c  open_file.c  open_file.cc  seek_io.c
src/mem/: easy_memset.c
src/modular/: module.cc  module_test.cc
src/network/: README.md  reactor.c
src/ns/: linux_namespace.md  mount_network.c  mount_pid.c  mount_uts.c  unshare_net.c
src/perf/: simple_workload.c
src/sockets/: socket_client.c  socket_server.c
src/stl/: list_runner.cc  vec_runner.cc
src/syscall/: use__syscall.c  use_glibc.c  use_soft_interrupt.c  use_syscall.c
